# llama3.2.c

./: .gitignore  CMakeLists.txt  build_msvc.bat  copy_tokenizer.ps1  copy_tokenizer.sh  diff_karpathy_dylan.diff  diff_upstream.diff  diff_upstream_karpathy.diff  llama_run.diff  model.py  read_story.py  run.c  tinystories.py  tokenizer.py  train.py
